--- a/index.html
+++ b/index.html
@@ -1,11 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  </head>
+
+  <body>
+    <nav data-aos="fade-down`" class="navbar sticky-top navbar-expand-lg">
+      <div class="container-fluid">
+        <a class="navname" href="#">Uzair </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarTogglerDemo02"
+          aria-controls="navbarTogglerDemo02"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+          <ul class="navbar-nav m-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <h4>
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </h4>
+            </li>
+            <li class="nav-item">
+              <h4><a class="nav-link" href="./movies.html">Movies</a></h4>
+            </li>
+          </ul>
+          <form class="d-flex" role="search">
+            <input
+              class="form-control me-2"
+              type="search"
+              placeholder="Search"
+              aria-label="Search"
+            />
+          </form>
+        </div>
+      </div>
+    </nav>
+
+    <section
+      class="d-flex justify-content-center text-white align-items-center text-center"
+      style="
+        background-image: linear-gradient(
+            to bottom,
+            rgba(0, 0, 0, 0.6) 0%,
+            rgba(0, 0, 0, 0.4) 100%
+          ),
+          url(imgs/bgimg.jpg);
+        background-repeat: no-repeat;
+        background-size: cover;
+      "
+    >
+      <div class="container">
+        <h1 class="fw-bolder lh-base display-3">
+          Watch Free Movies With Mflix.
+        </h1>
+        <br />
+        <h3>Stop searching for free movie websites and watch Mflix now.</h3>
+        <br />
+        <a href="./movies.html">
+          <button class="button-36" role="button">Button 36</button>
+        </a>
+      </div>
+    </section>
+    <!-- card -->
+    <div data-aos="fade-right" class="bx1">
+      <div class="new1">
+       </div>
+       <div class="tx2">
+     <h1>STAY ON THE PULSE. FOLLOW PEPSI.</h1>
+    </div>
+
+      <div class="ibox">
+      <img src="/imgs/poster10.jpg" alt="" width="15%" height="90%" >
+      <img src="/imgs/poster10.jpg" alt="" width="15%" height="50%" >
+      <img src="/imgs/poster10.jpg" alt="" width="15%" height="100%" >
+      <img src="/imgs/poster10.jpg" alt="" width="15%" height="100%" >
+      <img src="/imgs/poster10.jpg" alt="" width="15%" height="100%" >
+      <img src="/imgs/poster10.jpg" alt="" width="15%" height="100%" >
+ 
+    </div>
+     </div>
+
+    <div data-aos="fade-right" class="bx1">
+   <div class="new1">
+    </div>
+    <div class="tx1">
+  <h1><b>Watch</b></h1>
+  <h1><b>Everywhere . <br></b></h1>
+  <h3>Stream unlimited movies and TV <br> shows on your phone, tablet, laptop,<br> and TV.</h3>
+</div>
+  </div>
+  <script>
+    AOS.init();
+  </script>
+  
+  </body>
 </html>
