--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   </head>
 
-  <body>
-    <nav data-aos="fade-down`" class="navbar sticky-top navbar-expand-lg">
+  <body class="bg1">
+    <nav  class="navbar sticky-top navbar-expand-lg">
       <div class="container-fluid">
         <a class="navname" href="#">Uzair </a>
         <button
@@ -86,34 +86,136 @@
       </div>
     </section>
     <!-- card -->
-    <div data-aos="fade-right" class="bx1">
-      <div class="new1">
-       </div>
-       <div class="tx2">
-     <h1>STAY ON THE PULSE. FOLLOW PEPSI.</h1>
+    <!-- 2 -->
+    <section>
+      <div class="container-fluid align-items-center p-5">
+        <div class="d-flex flex-column py-5">
+          <div
+                      class="d-flex flex-row border-bottom justify-content-between text-center align-items-center text-white">
+                      <h1 class="display-6">Popular Movies</h1>
+                      <a href="movies.html"
+                          class="text-decoration-underline text-purple-300 cta fw-bold  mt-3">Browse</a>
+                        </div>
+                  <div class="d-flex flex-row flex-wrap justify-content-center justify-content-md-start py-5">
+                    <div class="m-2 card card-cover border-0 rounded-4 card-hover cursor-pointer"
+                    data-aos="fade-down">
+                    <a href="movie-details.html">
+                      <img class="rounded-4 shadow" src="./imgs/poster16.jpg" alt=""
+                              srcset="" width="300px" height="393">
+                            </a>
+                          </div>
+                      <div class="m-2 card card-cover border-0 rounded-4 card-hover cursor-pointer"
+                          data-aos="fade-down">
+                          <a href="movie-details.html">
+                            <img class="rounded-4 shadow" src="./imgs/poster10.jpg" alt=""
+                            srcset="" width="300px" height="393">
+                          </a>
+                        </div>
+                        <div class="m-2 card card-cover border-0 rounded-4 card-hover cursor-pointer"
+                        data-aos="fade-down">
+                        <a href="movie-details.html">
+                          <img class="rounded-4 shadow" src="./imgs/poster1.jpg" alt=""
+                          srcset="" width="300px" height="393">
+                          </a>
+                      </div>
+                      <div class="m-2 card card-cover border-0 rounded-4 card-hover cursor-pointer"
+                          data-aos="fade-up">
+                          <a href="movie-details.html">
+                              <img class="rounded-4 shadow" src="./imgs/poster13.jpg" alt="" srcset="" width="300px" height="393">
+                            </a>
+                      </div>
+                      <div class="m-2 card card-cover border-0 rounded-4 card-hover cursor-pointer"
+                          data-aos="fade-down">
+                          <a href="movie-details.html">
+                          <img class="rounded-4 shadow" src="./imgs/poster15.jpg" alt=""
+                          srcset="" width="300px" height="393">
+                        </a>
+                      </div>
+                      <div class="m-2 card card-cover border-0 rounded-4 card-hover cursor-pointer"
+                          data-aos="fade-down">
+                          <a href="movie-details.html">
+                          <img class="rounded-4 shadow" src="./imgs/poster20.jpg" alt=""
+                          srcset="" width="300px" height="393">
+                          </a>
+                        </div>
+                        <!-- 3 -->
+                        <div class="m-2 card card-cover border-0 rounded-4 card-hover cursor-pointer"
+                        data-aos="fade-up">
+                        <a href="movie-details.html">
+                            <img class="rounded-4 shadow" src="./imgs/poster18.jpg" alt="" srcset="" width="300px" height="393">
+                          </a>
+                    </div> <div class="m-2 card card-cover border-0 rounded-4 card-hover cursor-pointer"
+                    data-aos="fade-up">
+                    <a href="movie-details.html">
+                        <img class="rounded-4 shadow" src="./imgs/poster3.jpg" alt="" srcset="" width="300px" height="393">
+                      </a>
+                </div> <div class="m-2 card card-cover border-0 rounded-4 card-hover cursor-pointer"
+                data-aos="fade-up">
+                <a href="movie-details.html">
+                    <img class="rounded-4 shadow" src="./imgs/poster7.jpg" alt="" srcset="" width="300px" height="393">
+                  </a>
+            </div>
+            <div class="m-2 card card-cover border-0 rounded-4 card-hover cursor-pointer"
+            data-aos="fade-up">
+            <a href="movie-details.html">
+                <img class="rounded-4 shadow" src="./imgs/poster8.jpg" alt="" srcset="" width="300px" height="393">
+              </a>
+        </div>
+                      </div>
+              </div>
+            </div>
+          </section>
+          <!-- 2 -->
+          
+          <div data-aos="fade-right" class="bx2" >
+            <div class="new1">
+            </div>
+            <div class="footertx">
+              <h3>Questions? Contact us.</h3>
+              <br>
+              <h3>FAQ</h3>
+       <br>
+       <h3>Investor Relations</h3>
+       <br>
+       <h3>Privacy</h3>
+       <br>
+       <h3>Speed Test</h3>
+       <br>
+       <h3>Netflix Pakistan</h3>
     </div>
+    <!-- 2 -->
+    <div class="footertx2">
+      <h3>
+        Help Center</h3>
+      <br>
+      <h3>
+        Jobs</h3>
+      <br>
+      <h3>
+        Cookie Preferences</h3>
+      <br>
+      <h3>
+        Legal Notices</h3>
+      <br>
+      <!-- 3 -->
+      <div class="footertx3">
+        <h3>Account</h3>
+        <br>
+        <h3>Ways to Watch</h3>
+        <br>
+        <h3> Corporate Information</h3>
+        <br>
+        <h3>Only on Netflix</h3>
+        <br>
+   </div>
+    </div>
+    <!-- u -->
 
-      <div class="ibox">
-      <img src="/imgs/poster10.jpg" alt="" width="15%" height="90%" >
-      <img src="/imgs/poster10.jpg" alt="" width="15%" height="50%" >
-      <img src="/imgs/poster10.jpg" alt="" width="15%" height="100%" >
-      <img src="/imgs/poster10.jpg" alt="" width="15%" height="100%" >
-      <img src="/imgs/poster10.jpg" alt="" width="15%" height="100%" >
-      <img src="/imgs/poster10.jpg" alt="" width="15%" height="100%" >
- 
-    </div>
-     </div>
-
-    <div data-aos="fade-right" class="bx1">
-   <div class="new1">
-    </div>
-    <div class="tx1">
-  <h1><b>Watch</b></h1>
-  <h1><b>Everywhere . <br></b></h1>
-  <h3>Stream unlimited movies and TV <br> shows on your phone, tablet, laptop,<br> and TV.</h3>
-</div>
-  </div>
-  <script>
+      <div class="d-d-flex justify-content-between w-50 ll align-items-center border-top" >
+        <div class="d-flex w" >
+          <p>Copyright &copy; 2023 MFlix</p>
+      </div>
+<script>
     AOS.init();
   </script>
   
