--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <body class="bg1">
     <nav  class="navbar sticky-top navbar-expand-lg">
       <div class="container-fluid">
-        <a class="navname" href="#">Uzair </a>
+        <a class="navname" href="#">MoviesHub</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -41,11 +41,11 @@
           <ul class="navbar-nav m-auto mb-2 mb-lg-0">
             <li class="nav-item">
               <h4>
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active h" aria-current="page" href="#">Home</a>
               </h4>
             </li>
             <li class="nav-item">
-              <h4><a class="nav-link" href="./movies.html">Movies</a></h4>
+              <h4><a class="nav-link h" href="./movies.html">Movies</a></h4>
             </li>
           </ul>
           <form class="d-flex" role="search">
@@ -74,14 +74,14 @@
       "
     >
       <div class="container">
-        <h1 class="fw-bolder lh-base display-3">
-          Watch Free Movies With Mflix.
+        <h1 class="fw-bolder h lh-base display-3">
+          Watch Free Movies With MoviesHub.
         </h1>
         <br />
-        <h3>Stop searching for free movie websites and watch Mflix now.</h3>
+        <h3 class="h">Stop searching for free movie websites and watch MoviesHub. </h3>
         <br />
         <a href="./movies.html">
-          <button class="button-36" role="button">Button 36</button>
+          <button class="button" role="button">Browse</button>
         </a>
       </div>
     </section>
@@ -92,73 +92,73 @@
         <div class="d-flex flex-column py-5">
           <div
                       class="d-flex flex-row border-bottom justify-content-between text-center align-items-center text-white">
-                      <h1 class="display-6">Popular Movies</h1>
+                      <h1 class="display-6 h">Popular Movies</h1>
                       <a href="movies.html"
                           class="text-decoration-underline text-purple-300 cta fw-bold  mt-3">Browse</a>
                         </div>
                   <div class="d-flex flex-row flex-wrap justify-content-center justify-content-md-start py-5">
                     <div class="m-2 card card-cover border-0 rounded-4 card-hover cursor-pointer"
                     data-aos="fade-down">
-                    <a href="movie-details.html">
-                      <img class="rounded-4 shadow" src="./imgs/poster16.jpg" alt=""
+                    <a href="MoviesAbout.html">
+                      <img class="rounded-4 shadow" src="./imgs/poster12.jpg" alt=""
                               srcset="" width="300px" height="393">
                             </a>
                           </div>
                       <div class="m-2 card card-cover border-0 rounded-4 card-hover cursor-pointer"
                           data-aos="fade-down">
-                          <a href="movie-details.html">
+                          <a href="MoviesAbout.html">
                             <img class="rounded-4 shadow" src="./imgs/poster10.jpg" alt=""
                             srcset="" width="300px" height="393">
                           </a>
                         </div>
                         <div class="m-2 card card-cover border-0 rounded-4 card-hover cursor-pointer"
                         data-aos="fade-down">
-                        <a href="movie-details.html">
+                        <a href="MoviesAbout.html">
                           <img class="rounded-4 shadow" src="./imgs/poster1.jpg" alt=""
                           srcset="" width="300px" height="393">
                           </a>
                       </div>
                       <div class="m-2 card card-cover border-0 rounded-4 card-hover cursor-pointer"
                           data-aos="fade-up">
-                          <a href="movie-details.html">
+                          <a href="MoviesAbout.html">
                               <img class="rounded-4 shadow" src="./imgs/poster13.jpg" alt="" srcset="" width="300px" height="393">
                             </a>
                       </div>
                       <div class="m-2 card card-cover border-0 rounded-4 card-hover cursor-pointer"
                           data-aos="fade-down">
                           <a href="movie-details.html">
-                          <img class="rounded-4 shadow" src="./imgs/poster15.jpg" alt=""
+                          <img class="rounded-4 shadow" src="./imgs/poster5.jpg" alt=""
                           srcset="" width="300px" height="393">
                         </a>
                       </div>
                       <div class="m-2 card card-cover border-0 rounded-4 card-hover cursor-pointer"
                           data-aos="fade-down">
-                          <a href="movie-details.html">
-                          <img class="rounded-4 shadow" src="./imgs/poster20.jpg" alt=""
+                          <a href="MoviesAbout.html">
+                          <img class="rounded-4 shadow" src="./imgs/poster2.jpg" alt=""
                           srcset="" width="300px" height="393">
                           </a>
                         </div>
                         <!-- 3 -->
                         <div class="m-2 card card-cover border-0 rounded-4 card-hover cursor-pointer"
                         data-aos="fade-up">
-                        <a href="movie-details.html">
-                            <img class="rounded-4 shadow" src="./imgs/poster18.jpg" alt="" srcset="" width="300px" height="393">
+                        <a href="MoviesAbout.html">
+                            <img class="rounded-4 shadow" src="./imgs/poster8.jpg" alt="" srcset="" width="300px" height="393">
                           </a>
                     </div> <div class="m-2 card card-cover border-0 rounded-4 card-hover cursor-pointer"
                     data-aos="fade-up">
-                    <a href="movie-details.html">
+                    <a href="MoviesAbout.html">
                         <img class="rounded-4 shadow" src="./imgs/poster3.jpg" alt="" srcset="" width="300px" height="393">
                       </a>
                 </div> <div class="m-2 card card-cover border-0 rounded-4 card-hover cursor-pointer"
                 data-aos="fade-up">
-                <a href="movie-details.html">
+                <a href="MoviesAbout.html">
                     <img class="rounded-4 shadow" src="./imgs/poster7.jpg" alt="" srcset="" width="300px" height="393">
                   </a>
             </div>
             <div class="m-2 card card-cover border-0 rounded-4 card-hover cursor-pointer"
             data-aos="fade-up">
-            <a href="movie-details.html">
-                <img class="rounded-4 shadow" src="./imgs/poster8.jpg" alt="" srcset="" width="300px" height="393">
+            <a href="MoviesAbout.html">
+                <img class="rounded-4 shadow" src="https://pad.mymovies.it/filmclub/2012/10/168/locandinapg5.jpg" alt="" srcset="" width="300px" height="393">
               </a>
         </div>
                       </div>
@@ -181,7 +181,7 @@
        <br>
        <h3>Speed Test</h3>
        <br>
-       <h3>Netflix Pakistan</h3>
+       <h3> MoviesHub</h3>
     </div>
     <!-- 2 -->
     <div class="footertx2">
@@ -205,7 +205,7 @@
         <br>
         <h3> Corporate Information</h3>
         <br>
-        <h3>Only on Netflix</h3>
+        <h3>Only on MoviesHub </h3>
         <br>
    </div>
     </div>
@@ -213,7 +213,7 @@
 
       <div class="d-d-flex justify-content-between w-50 ll align-items-center border-top" >
         <div class="d-flex w" >
-          <p>Copyright &copy; 2023 MFlix</p>
+          <p>Copyright &copy; MoviesHub 2024  </p>
       </div>
 <script>
     AOS.init();
