--- a/MoviesAbout.html
+++ b/MoviesAbout.html
@@ -142,7 +142,7 @@
                 <div class="d-flex flex-row flex-wrap align-items-center mt-2">
                   <img
                     src="https://th.bing.com/th/id/R.e5b8338ecad76257379dfcb829b3fafd?rik=tS8OMXUVTtOaeA&riu=http%3a%2f%2fwboc-digital.s3.amazonaws.com%2fproduction%2fsites%2fwboc%2fwp-content%2fuploads%2f2019%2f05%2f27150214%2fAladdin7-1350x900.jpg&ehk=4iFIvOmXAJKcXkD9C6Jn4FDwV9%2fetbCkeqphBGEfIEo%3d&risl=&pid=ImgRaw&r=0"
-                    alt="Hacksaw Ridge screenshot 1 thumbnail"
+                    alt="Aladdin screenshot 1 thumbnail"
                     class="mb-2 pe-2 ps-0"
                     style="max-width: 100%; height: auto"
                     data-bs-target="#movieScreenshots"
@@ -150,7 +150,7 @@
                   />
                   <img
                     src="https://th.bing.com/th/id/R.b89546c6844f2c6dbbb091ddc70a44cd?rik=cSGNAGd7uhAWOQ&pid=ImgRaw&r=0"
-                    alt="Hacksaw Ridge screenshot 2 thumbnail"
+                    alt="Aladdin screenshot 2 thumbnail"
                     class="mb-2 pe-2 ps-0"
                     style="max-width: 100%; height: auto"
                     data-bs-target="#movieScreenshots"
@@ -158,7 +158,7 @@
                   />
                   <img
                     src="https://th.bing.com/th/id/R.15a062cb72c36fefa95854813ac4d425?rik=zSG1rtYZz6VDcQ&riu=http%3a%2f%2fhdqwalls.com%2fwallpapers%2fjasmine-and-aladdin-in-aladdin-movie-2019-g1.jpg&ehk=nCQxLOLQUlmeGYHfqs5HOOLvmDQwLav9XdAZJsZio1Y%3d&risl=1&pid=ImgRaw&r=0"
-                    alt="Hacksaw Ridge screenshot 3 thumbnail"
+                    alt="Aladdin screenshot 3 thumbnail"
                     class="mb-2 pe-2 ps-0"
                     style="max-width: 100%; height: auto"
                     data-bs-target="#movieScreenshots"
@@ -166,7 +166,7 @@
                   />
                   <img
                     src="https://s.hdnux.com/photos/01/02/70/75/17534839/5/1200x0.jpg"
-                    alt="Hacksaw Ridge screenshot 4 thumbnail"
+                    alt="Aladdin screenshot 4 thumbnail"
                     class="mb-2 pe-2 ps-0"
                     style="max-width: 100%; height: auto"
                     data-bs-target="#movieScreenshots"
@@ -180,28 +180,28 @@
                   <div class="carousel-item active">
                     <img
                       src="https://th.bing.com/th/id/R.e5b8338ecad76257379dfcb829b3fafd?rik=tS8OMXUVTtOaeA&riu=http%3a%2f%2fwboc-digital.s3.amazonaws.com%2fproduction%2fsites%2fwboc%2fwp-content%2fuploads%2f2019%2f05%2f27150214%2fAladdin7-1350x900.jpg&ehk=4iFIvOmXAJKcXkD9C6Jn4FDwV9%2fetbCkeqphBGEfIEo%3d&risl=&pid=ImgRaw&r=0"
-                      alt="Hacksaw Ridge screenshot 1"
+                      alt="Aladdin screenshot 1"
                       style="max-width: 100%; height: auto"
                     />
                   </div>
                   <div class="carousel-item">
                     <img
                       src="https://th.bing.com/th/id/R.e5b8338ecad76257379dfcb829b3fafd?rik=tS8OMXUVTtOaeA&riu=http%3a%2f%2fwboc-digital.s3.amazonaws.com%2fproduction%2fsites%2fwboc%2fwp-content%2fuploads%2f2019%2f05%2f27150214%2fAladdin7-1350x900.jpg&ehk=4iFIvOmXAJKcXkD9C6Jn4FDwV9%2fetbCkeqphBGEfIEo%3d&risl=&pid=ImgRaw&r=0"
-                      alt="Hacksaw Ridge screenshot 2"
+                      alt="Aladdin screenshot 2"
                       style="max-width: 100%; height: auto"
                     />
                   </div>
                   <div class="carousel-item">
                     <img
                       src="https://th.bing.com/th/id/R.15a062cb72c36fefa95854813ac4d425?rik=zSG1rtYZz6VDcQ&riu=http%3a%2f%2fhdqwalls.com%2fwallpapers%2fjasmine-and-aladdin-in-aladdin-movie-2019-g1.jpg&ehk=nCQxLOLQUlmeGYHfqs5HOOLvmDQwLav9XdAZJsZio1Y%3d&risl=1&pid=ImgRaw&r=0"
-                      alt="Hacksaw Ridge screenshot 3"
+                      alt="Aladdin screenshot 3"
                       style="max-width: 100%; height: auto"
                     />
                   </div>
                   <div class="carousel-item">
                     <img
                       src="https://s.hdnux.com/photos/01/02/70/75/17534839/5/1200x0.jpg"
-                      alt="Hacksaw Ridge screenshot 4"
+                      alt="Aladdin screenshot 4"
                       style="max-width: 100%; height: auto"
                     />
                   </div>
