--- a/MoviesAbout.html
+++ b/MoviesAbout.html
@@ -61,11 +61,11 @@
           <ul class="navbar-nav m-auto mb-2 mb-lg-0">
             <li class="nav-item">
               <h4>
-                <a class="nav-link active" href="./index.html">Home</a>
+                <a class="nav-link active " href="./index.html">Home</a>
               </h4>
             </li>
             <li class="nav-item">
-              <h4><a class="nav-link" href="./movies.html">Movies</a></h4>
+              <h4><a class="nav-link " href="./movies.html">Movies</a></h4>
             </li>
           </ul>
           <form class="d-flex" role="search">
@@ -86,28 +86,28 @@
             <img src="./imgs/poster1.jpg" class="w-100" height="750px" />
           </div>
           <div class="col-md-6">
-            <h2 class="display-5 fw-bold a">Aladdin (2019 )</h2>
+            <h2 class="display-5 fw-bold h">Aladdin (2019 )</h2>
             <div class="d-flex items-center flex-wrap mt-2">
-              <span class="badge mx-1 my-2 b fs-6 rounded-pill bg-purple-700"
+              <span class="badge mx-1 my-2 b fs-6 rounded-pill h bg-purple-700"
                 >2019</span
               >
-              <span class="badge mx-1 my-2 c fs-6 rounded-pill bg-purple-700"
+              <span class="badge mx-1 my-2 c fs-6 rounded-pill h bg-purple-700"
                 >2h 8m</span
               >
-              <span class="badge mx-1 my-2 d fs-6 rounded-pill bg-purple-700"
+              <span class="badge mx-1 my-2 d fs-6 rounded-pill h bg-purple-700"
                 ><i class="bi bi-star"></i> 8.1</span
               >
               
-              <span class="badge mx-1 my-2 e fs-6 rounded-pill bg-purple-700"
+              <span class="badge mx-1 my-2 e fs-6 rounded-pill h bg-purple-700"
                 >Biography</span
               >
-              <span class="badge mx-1 my-2 f fs-6 rounded-pill bg-purple-700"
+              <span class="badge mx-1 my-2 f fs-6 rounded-pill h bg-purple-700"
                 >Drama</span
               >
-              <span class="badge mx-1 my-2 g fs-6 rounded-pill bg-purple-700"
+              <span class="badge mx-1 my-2 g fs-6 rounded-pill h bg-purple-700"
                 >History</span
               >
-              <span class="badge mx-1 my-2 h fs-6 rounded-pill bg-purple-700"
+              <span class="badge mx-1 my-2 h fs-6 rounded-pill h bg-purple-700"
                 >love</span
               >
             </div>
@@ -119,7 +119,7 @@
             </p>
             <hr />
             <div class="my-5 l"  style="height: 250px">
-              <h3 class="fs-2 fw-bold">Watch Trailer</h3>
+              <h3 class="fs-2 fw-bold h">Watch Trailer</h3>
               <iframe
                 width="560"
                 height="315"
@@ -136,7 +136,7 @@
             class="carousel slide"
             data-bs-ride="carousel"
           >
-            <h3 class="fs-2 m fw-bold"   >Screenshots</h3>
+            <h3 class="fs-2 m fw-bold h"   >Screenshots</h3>
             <div class="row">
               <div class="col-md-3 order-last order-md-first">
                 <div class="d-flex flex-row flex-wrap align-items-center mt-2">
@@ -175,7 +175,7 @@
                  
                 </div>
               </div>
-              <div class="col-md-9 order-first order-md-last">
+              <div class="col-md-9 order-first carel order-md-last">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
                     <img
