--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </head>
 
   <body class="bg1">
-    <nav  class="navbar sticky-top navbar-expand-lg">
+    <nav  class="navbar  sticky-top navbar-expand-lg">
       <div class="container-fluid">
         <a class="navname" href="#">MoviesHub</a>
         <button
@@ -37,19 +37,19 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-          <ul class="navbar-nav m-auto mb-2 mb-lg-0">
+        <div class="collapse navbar-collapse " id="navbarTogglerDemo02">
+          <ul class="navbar-nav m-auto  mb-2 mb-lg-0">
             <li class="nav-item">
               <h4>
-                <a class="nav-link active h" aria-current="page" href="#">Home</a>
+                <a class="nav-link active " aria-current="page" href="#">Home</a>
               </h4>
             </li>
             <li class="nav-item">
-              <h4><a class="nav-link h" href="./movies.html">Movies</a></h4>
+              <h4><a class="nav-link " href="./movies.html">Movies</a></h4>
             </li>
           </ul>
           <form class="d-flex" role="search">
-            <input
+            <input id="searchmovie"
               class="form-control me-2"
               type="search"
               placeholder="Search"
@@ -74,11 +74,11 @@
       "
     >
       <div class="container">
-        <h1 class="fw-bolder h lh-base display-3">
+        <h1 class="fw-bolder h1 lh-base display-3">
           Watch Free Movies With MoviesHub.
         </h1>
         <br />
-        <h3 class="h">Stop searching for free movie websites and watch MoviesHub. </h3>
+        <h3 class="h1">Stop searching for free movie websites and watch MoviesHub. </h3>
         <br />
         <a href="./movies.html">
           <button class="button" role="button">Browse</button>
@@ -91,8 +91,8 @@
       <div class="container-fluid align-items-center p-5">
         <div class="d-flex flex-column py-5">
           <div
-                      class="d-flex flex-row border-bottom justify-content-between text-center align-items-center text-white">
-                      <h1 class="display-6 h">Popular Movies</h1>
+                      class="d-flex flex-row border-bottom justify-content-between  text-center align-items-center text-black">
+                      <h1 class="display-6 ">Popular Movies</h1>
                       <a href="movies.html"
                           class="text-decoration-underline text-purple-300 cta fw-bold  mt-3">Browse</a>
                         </div>
