--- a/movies.html
+++ b/movies.html
@@ -38,7 +38,7 @@
           <ul class="navbar-nav m-auto mb-2 mb-lg-0">
             <li class="nav-item">
               <h4>
-                <a class="nav-link active" href="./index.html">Home</a>
+                <a class="nav-link  active" href="./index.html">Home</a>
               </h4>
             </li>
             <li class="nav-item">
@@ -58,7 +58,7 @@
     </nav>
 
     <h1 class="toph1">Movies</h1>
-
+ <hr>
     <div class="movie-container">
       <div data-aos="flip-right" class="posters">
         <a href="MoviesAbout.html"
@@ -258,7 +258,7 @@
         <div class="container-fluid align-items-center p-5">
           <div class="d-flex flex-column py-5">
             <div
-              class="d-flex flex-row border-bottom justify-content-between text-center align-items-center text-white"
+              class="d-flex flex-row border-bottom justify-content-between text-center align-items-center text-black"
             >
               <h1 class="display-6">Marvel Movies</h1>
               <a
@@ -369,12 +369,12 @@
         <div class="container-fluid align-items-center p-5">
           <div class="d-flex flex-column py-5">
             <div
-              class="d-flex flex-row border-bottom justify-content-between text-center align-items-center text-white"
+              class="d-flex flex-row border-bottom justify-content-between text-center align-items-center text-black"
             >
               <h1 class="display-6">Horror Movies</h1>
               <a
                 href="movies.html"
-                class="text-decoration-underline text-purple-300 cta fw-bold mt-3"
+                class="text-decoration-underline text-purple-300  cta fw-bold mt-3"
                 >Browse</a
               >
             </div>
