--- a/MoviesAbout.html
+++ b/MoviesAbout.html
@@ -218,54 +218,14 @@
       </div>
          
     </main>
-    <div  data-aos="fade-right" class="bx2" >
-        <div class="new1">
+    <div  class="bx3" >
+    <div class="new1">
+    </div>
+      <div class="d-d-flex justify-content-between w-50 l2 align-items-center border-top" >
+        <div class="d-flex w" >
+        <p>Copyright &copy; MoviesHub 2024  </p>
         </div>
-    <div class="footertx">
-        <h3>Questions? Contact us.</h3>
-        <br>
-        <h3>FAQ</h3>
- <br>
- <h3>Investor Relations</h3>
- <br>
- <h3>Privacy</h3>
- <br>
- <h3>Speed Test</h3>
- <br>
- <h3>MoviesHub</h3>
-</div>
-<div class="footertx2">
-    <h3>
-      Help Center</h3>
-    <br>
-    <h3>
-      Jobs</h3>
-    <br>
-    <h3>
-      Cookie Preferences</h3>
-    <br>
-    <h3>
-      Legal Notices</h3>
-    <br>
-    <!-- 3 -->
-    <div class="footertx3">
-      <h3>Account</h3>
-      <br>
-      <h3>Ways to Watch</h3>
-      <br>
-      <h3> Corporate Information</h3>
-      <br>
-      <h3>Only on MoviesHub</h3>
-      <br>
- </div>
-  </div>
-  <!-- u -->
-
-    <div class="d-d-flex justify-content-between w-50 ll align-items-center border-top" >
-      <div class="d-flex w" >
-        <p>Copyright &copy; MoviesHub 2024 </p></div>
-
-  </div>
+      </div>
   <script>
     AOS.init();
   </script>
